--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -47,14 +47,16 @@
     background-color: #0056b3;
 }
 form {
+    margin-top: 4%;
     text-align: center;
     display: flex;
     justify-content: center;
     gap: 15px;
 }
 
-h1{
-    text-align: center;
+h1 {
+    padding-left: 50px;
+    text-align: left;
 }
 
 select {
@@ -66,6 +68,7 @@ select {
 }
 
 .card-container{
+    margin-top: 2%;
     text-align: center;
     display: flex;
     gap: 2%;
