--- a/src/main/resources/templates/edit-profil.html
+++ b/src/main/resources/templates/edit-profil.html
@@ -62,7 +62,25 @@
                 <input type="password" th:field="*{motDePasse}" placeholder="Laisser vide pour ne pas changer" />
             </div>
                 <button class="logbtn" type="submit">Sauvegarder les modifications</button>
+
+
+
         </form>
+
     </div>
 </body>
+<style>
+    .delete-btn {
+        background-color: red;
+        color: white;
+        padding: 10px;
+        border: none;
+        cursor: pointer;
+        margin-top: 20px;
+    }
+    .delete-btn:hover {
+        background-color: darkred;
+    }
+
+</style>
 </html>
