--- a/src/main/resources/static/css/profil.css
+++ b/src/main/resources/static/css/profil.css
@@ -267,3 +267,12 @@ html, body {
     margin-top: 25px;
 }
 
+.profil {
+    display: flex;
+    justify-content: center;
+}
+
+.profil .logbtn {
+    width: 10% ;
+}
+
