--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
         <link rel="stylesheet" href="/css/profil.css">
         <link rel="stylesheet" href="/css/nav.css">
+        <link rel="stylesheet" href="/css/login.css">
 
 
     </head>
@@ -66,7 +67,7 @@
     </div>
     </div>
     <div class="profil">
-        <button class="profile__edit-button">
+        <button class="profile__edit-button btn logbtn">
             <a th:href="@{/edit-profil}">Modifier Profil</a>
         </button>
     </div>
