--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -56,7 +56,7 @@ form {
 
 h1 {
     padding-left: 50px;
-    text-align: left;
+    text-align: center;
 }
 
 select {
@@ -71,6 +71,7 @@ select {
     margin-top: 2%;
     text-align: center;
     display: flex;
+    justify-content: center;
     gap: 2%;
 }
 
